--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ workflows:
 
 jobs:
   build:
-    working_directory: ~/SimpleApplication
+    working_directory: ~/AnMar
     docker:
       - image: circleci/node:10.16.3
     steps:
