--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,13 @@ workflows:
             branches:
               only:
                 - main
+      - deploy:
+          filters:
+            branches:
+              only:
+                - main
+          requires:
+            - build
 
 jobs:
   build:
@@ -25,7 +32,17 @@ jobs:
       - run:
           name: install-npm
           command: npm install
+      - run:
+          name: test-run
+          command: npm run test
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
+deploy:
+  docker:
+    - image: circleci/node:10.16.3
+  steps:
+    - run:
+        name: deploy-application
+        command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "export SERVER=\"$SERVER\"; export PRIVATE_KEY=\"$PRIVATE_KEY\"; rm -rf AnMar/;git clone https://github.com/NCI-Marta/AnMar.git; source AnMar/deploy.sh"
